fixing overflow for images in create/edit request

--- a/frontend/components/CreateRequestCard/CreateRequestCard.module.css
+++ b/frontend/components/CreateRequestCard/CreateRequestCard.module.css
@@ -84,3 +84,9 @@
     display: flex;
     flex-direction: column;
 }
+
+.uploadedImage {
+    height: 300px;
+    width: auto;
+    max-width: 800px;
+}
