--- a/frontend/components/ImageCarousel/ImageCarousel.module.css
+++ b/frontend/components/ImageCarousel/ImageCarousel.module.css
@@ -1,5 +1,9 @@
 .imageContainer {
-    height: 170px;
-    width: auto;
-    max-width: 500px;
+  height: auto;
+  width: 100%;
+  max-height: 500px;
+}
+
+.carouselItemContainer {
+  padding: 0px 50px;
 }
